--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ defusedxml==0.7.1
 Django==3.2.9
 django-allauth==0.46.0
 django-crispy-forms==1.13.0
+djangorestframework==3.12.4
 idna==3.3
 oauthlib==3.1.1
 pycparser==2.21
