--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Django==3.2.9
 django-allauth==0.46.0
 django-crispy-forms==1.13.0
 djangorestframework==3.12.4
+fontawesome-free==5.15.4
 idna==3.3
 oauthlib==3.1.1
 pycparser==2.21
